frontend/web/css/site.css
/* ... */
.calculator .item.item-3 {
    background: #6CBF4A;
}

.calculator .item.item-4 {
    background: #0F55A9;
}

.calculator .item h3 {
    color: #FFFFFF;
    font-weight: 400;
}

.calculator .item h3 span {
    font-weight: 700;
}

.calculator .item .info .price-name {
    font-size: 18px;
}

.calculator .item .info .price {
    display: block;
    margin: 10px 30px 0;
    font-size: 24px;
    text-transform: uppercase;
    font-weight: 700;
    background-color: #FFFFFF;
    border-radius: 5px;
}

.calculator .item.item-1 .info .price {
    color: #862183;
}

.calculator .item.item-2 .info .price {
    color: #109C98;
}

.calculator .item.item-3 .info .price {
    color: #6CBF4A;
}

.calculator .item.item-4 .info .price {
    color: #0F55A9;
}

.calculator .item .text {
    font-size: 12px;
    font-style: italic;
}

.calculator .item .info ul {
    font-size: 12px;
    text-align: left;
    margin: 40px 0;
}

.calculator .buttons {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: #FFFFFF;
    min-height: 150px;
}

.calculator .buttons .message-button {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.calculator .irs-from,
.calculator .irs-to,
.calculator .irs-single,
.calculator .irs-line,
.calculator .irs-slider.single {
    background-color: #3B34A6;
}

.calculator .irs-from::after,
.calculator .irs-to::after,
.calculator .irs-single::after {
    display: none;
}

.calculator .irs-line {
    height: 3px;
    top: 30px;
}

.calculator .irs-line > *,
.calculator .irs-slider.single,
.calculator .irs-bar,
.calculator .irs-bar-edge {
    background-image: none;
}

.calculator .irs-slider.single {
    border-radius: 50%;
    width: 16px;
    height: 16px;
}

.why-we .container:first-child {
    background: url(../img/main/why-we-bg.png) no-repeat center 30px / 100% auto;
    padding: 45px 0;
}

.why-we .why-we-carousel .item .info {
    padding: 0 45px;
}

.why-we .why-we-carousel .owl-dots {
    text-align: center;
    padding: 10px 0;
}

.why-we .why-we-carousel .owl-dots .owl-dot {
    display: inline-block;
    width: 45px;
    height: 12px;
    border: 3px solid #D8D8D8;
    background-color: transparent;
    margin-right: 5px;
}

.why-we .why-we-carousel .owl-dots .owl-dot.active {
    background-color: #403BAA;
    border-color: #403BAA;
}

.why-we .order-button {
    padding: 30px 0 40px;
    text-align: center;
}

.why-we .grid {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}

.why-we .grid .item {
    flex-basis: 50%;
    padding: 40px;
}

.why-we .grid .item-image {
    padding: 0;
    width: 570px;
    height: 570px;
    background: no-repeat center center / 100% 100%;
}

.why-we .grid .item .subheading {
    display: inline-block;
    color: #3B34A6;
    text-transform: uppercase;
    margin-bottom: 20px;
}

.why-we .grid .item h3 {
    font-size: 36px;
    font-weight: 700;
    margin-top: 0;
    margin-bottom: 20px;
}

.why-we .grid .item .btn {
    margin-top: 20px;
}

.why-we .grid .item-blue {
    background-color: #3B34A6;
    color: #FFFFFF;
    padding: 40px 70px;
}

.why-we .grid .item-blue h3 {
    color: #FFFFFF;
}

.why-we .grid .item-blue .btn {
    background-color: #3B34A6;
    color: #FFFFFF;
    border-color: #FFFFFF;
}

/* how-to */

.how-to .container {
    background: url(../img/main/how-to-bg.png) no-repeat center top / 100% auto;
    padding: 45px 0;
}

/* TODO: префиксы. */
.flex {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.how-to .how-to-grid {
    padding: 30px 0;
}

/* TODO: префиксы. */
.how-to .item {
    text-align: center;
    flex-basis: 20%;
}

.how-to .item .image {
    position: relative;
}

.how-to .item .image::after {
    content: '';
    position: absolute;
    right: -85px;
    top: 50%;
    transform: translateY(-50%);
    width: 95px;
    height: 35px;
    background: url(../img/main/arrow-right.png) no-repeat center center / auto;
}

.how-to .item:last-child .image::after {
    display: none;
}

.how-to .item img {
    display: block;
    float: none;
    margin: 0 auto;
}

.how-to .item .info {
    padding: 15px 0;
}

/* consultation-form */

.consultation-form {
    padding-bottom: 20px;
}

.consultation-form .heading h2 {
    margin-top: 50px;
    margin-bottom: 30px;
}

.consultation-form .heading span {
    text-transform: none;
}

.form-control,
textarea {
    border: 0;
    background-color: #F6F6F6;
    padding: 25px;
    box-shadow: none;
    width: 100%;
}

.form-control {
    height: 64px;
}

.consultation-form .form-buttons {
    text-align: center;
}

/* map */

.map {
    position: relative;
}

.contacts-card {
    position: absolute;
    top: 50%;
    right: 0;
    transform: translateY(-50%);
    padding: 20px 30px;
    width: 420px;
    background-color: #FFFFFF;
}

.contacts-card h2 {
    margin-top: 0;
    color: #3B34A6;
}

.contacts-card img {
    margin-bottom: 20px;
}

.contacts-card .buttons {
    text-align: center;
}
/* ... */

